--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a562ae46",
+   "id": "dbf1d80d",
    "metadata": {},
    "source": [
-    "Data Exploration"
+    "Feature Experiments"
    ]
   }
  ],
